fdo#65932: sw: remove SwDoc::ShareLayout

It is a crude hack that is no longer necessary because the underlying
problems that caused crashes when deleting the layout have been fixed.

Also it appears to cause crahes now.

Conflicts:
	sw/inc/doc.hxx
	sw/source/core/doc/doclay.cxx
	sw/source/core/doc/docnew.cxx
	sw/source/core/view/vnew.cxx

Change-Id: I601bdb0dc0aff5f4ddb8b8f4ba4c8d1f72c76666
(cherry picked from commit f8dfa3a81a5382b2f18a705bd512625754167573)